--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "prettier": "^3.3.3",
+    "stylelint": "^16.10.0",
+    "stylelint-prettier": "^5.0.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
